--- a/about.html
+++ b/about.html
@@ -279,7 +279,7 @@
     <section class="Our-framework facility-frame">
         <div class="container">
             <!--  -->
-            <div class="slider-main-div-1 service-desktop">
+            <div class="slider-main-div-1 pt-5 service-desktop">
                 <div class="image-section-1">
                     <img src="./Images/about-facility.webp" alt="Building Image">
                 </div>
