--- a/ifm-Page.html
+++ b/ifm-Page.html
@@ -396,10 +396,11 @@
         </div>
     </section>
     <!-- your trusted section end -->
+    <!-- framework section end -->
     <section class="Our-framework facility-frame">
         <div class="container">
             <!--  -->
-            <div class="slider-main-div-1 py-5 service-desktop">
+            <div class="slider-main-div-1 service-desktop">
                 <div class="image-section-1">
                     <img src="Images/AFMS-Framework.webp" alt="Building Image">
                 </div>
@@ -413,25 +414,25 @@
                                 ensure compliance.</p>
                         </div>
                         <div class="slide-1" id="slide-2">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Human Resource Management.png" alt="">
                             <h3>Human Resource Management</h3>
                             <p>Our HR team fosters a supportive environment, recruiting skilled professionals and
                                 nurturing their development.</p>
                         </div>
                         <div class="slide-1" id="slide-3">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Transition Management.png" alt="">
                             <h3>Transition Management</h3>
                             <p>We expertly manage seamless transitions, ensuring minimal disruption and smooth
                                 operational shifts. </p>
                         </div>
                         <div class="slide-1" id="slide-4">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Performance Management.png" alt="">
                             <h3>Performance Management</h3>
                             <p>Our performance management system tracks key metrics and benchmarks, driving continuous
                                 improvement. </p>
                         </div>
                         <div class="slide-1" id="slide-5">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Training Tream.png" alt="">
                             <h3>Training Team</h3>
                             <p>Our dedicated training team equips staff with essential skills and knowledge through
                                 tailored programs.</p>
@@ -449,27 +450,32 @@
                     <h2>Our Framework For Seamless Facility Management</h2>
                     <div class="slider-1 owl-carousel owl-theme">
                         <div class="slide-1" id="slide-1">
+                            <img src="./Images/frame-img1.png" alt="">
                             <h3>Safety Oversight</h3>
                             <p>We maintain rigorous safety standards, regularly auditing procedures and practices to
                                 ensure compliance.</p>
                         </div>
                         <div class="slide-1" id="slide-2">
+                            <img src="./new-images/Human Resource Management.png" alt="">
                             <h3>Human Resource Management</h3>
                             <p>Our HR team fosters a supportive environment, recruiting skilled professionals and
                                 nurturing their development.</p>
                         </div>
                         <div class="slide-1" id="slide-3">
+                            <img src="./new-images/Transition Management.png" alt="">
                             <h3>Transition Management</h3>
                             <p>We expertly manage seamless transitions, ensuring minimal disruption and smooth
                                 operational shifts. </p>
                         </div>
                         <div class="slide-1" id="slide-4">
+                            <img src="./new-images/Transition Management.png" alt="">
                             <h3>Performance Management</h3>
                             <p>Our performance management system tracks key metrics and benchmarks, driving continuous
                                 improvement.
                             </p>
                         </div>
                         <div class="slide-1" id="slide-5">
+                            <img src="./new-images/Training Tream.png" alt="">
                             <h3>Performance Management</h3>
                             <p>Our dedicated training team equips staff with essential skills and knowledge through
                                 tailored programs.</p>
@@ -481,7 +487,7 @@
             <!-- mobile -->
         </div>
     </section>
-    <!-- our framework -->
+    <!-- framework section start -->
     <section class="case-study-section">
         <div class="container">
             <div class="case-main-div">
