--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- Banner section -->
     <section class="banner-section home-banner">
         <div class="banner-content wow bounceInUp" data-wow-delay="0.1s">
-            <h1>Consistent and Reliable Integrated Facility Management Services</h1>
+            <h1>Comprehensive <span>360°</span> Facility & Property Management Solutions</h1>
             <!-- <p><span>One Partner for all your needs from</span>
                 <br>
                 technical expertise to advanced
@@ -69,69 +69,48 @@
     <section class="slider-section">
         <div class="slider client-patner">
             <div class="owl-carousel owl-theme clients-carousel">
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo9.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo9.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo10.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo10.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo11.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo11.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo12.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo12.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo13.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo13.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo14.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo14.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo15.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo15.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo16.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo16.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo17.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo17.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo18.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo18.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo19.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo19.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo20.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo20.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo4.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo4.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo5.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo5.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo6.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo6.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo7.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo7.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo8.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo8.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo9.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo9.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo10.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo10.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                        src="./new-images/pather-logo11.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo11.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img"
-                    src="./new-images/pather-logo3.png">
-            </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo3.png">
+                </div>
             </div>
         </div>
         </div>
@@ -149,14 +128,30 @@
                 </div>
                 <div class="consistent-cont">
                     <h2 class="wow bounceInLeft">Consistent and Reliable Integrated Facility Management Services</h2>
-                    <p>We prioritize spaces and people. In every industry and environment, the well-being of people is
-                        paramount. When your facilities are safe, clean, efficient, and sustainable, it enhances
-                        productivity and keeps your business operations smooth. </p>
-                    <p class="mt-3 common-btn"><a href="#">Know more</a></p>
-                </div>
+                    <div class="read-moremain">
+                        <div class="read-moremain">
+                            <p>Our 360° approach covers everything from regular facility services to infrastructure
+                                development.
+                                Whether managing your monthly and yearly equipment maintenance, improving efficiency
+                                through
+                                audits and IoT, or streamlining operations with our advanced FM software, we ensure your
+                                facility runs smoothly. Recognizing that the future calls for sustainable solutions, we
+                                help you
+                                embrace clean energy and energy-saving solutions to save big.</p>
+                            <p class="moretext">All this is guided by our core principles: strict compliance, process
+                                orientation,
+                                quality-driven
+                                solutions, and a commitment to advanced technology. At Apollo, we grow with you,
+                                building
+                                efficient, future-ready facilities.</p>
+                                <p class="read-more"><a class="moreless-button" href="javascript:void(0)">Read more</a> <span><i
+                                    class="fa-solid fa-angles-right"></i></span></p>
+                            <!-- <p class="mt-3 common-btn"><a href="#">Know more</a></p> -->
+                        </div>
+                    </div>
 
+                </div>
             </div>
-        </div>
 
     </section>
     <!-- consistent-section-end -->
@@ -202,10 +197,8 @@
                             <!-- Slider 2 -->
                             <div id="slider2" class="slider service-mainimg">
                                 <div><img src="./Images/our-value-img-1.webp" alt=""></div>
-                                <div><img src="./new-images/oferrepair and maintenance.png"
-                                        alt=""></div>
-                                <div><img src="./new-images/oferPerformance improvement.png"
-                                        alt=""></div>
+                                <div><img src="./new-images/oferrepair and maintenance.png" alt=""></div>
+                                <div><img src="./new-images/oferPerformance improvement.png" alt=""></div>
                                 <div><img src="./new-images/oferSustainable solutions.png" alt="">
                                 </div>
                             </div>
@@ -251,8 +244,8 @@
                                         aria-labelledby="headingTwo" data-bs-parent="#thumbnail-slider">
                                         <div class="accordion-body">
                                             <ul>
-                                                <li>Technical Services</li>
-                                                <li>Soft Services</li>
+                                                <li>MEP & General Engineering</li>
+                                                <li>Micro Project Services</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -271,8 +264,9 @@
                                         aria-labelledby="headingThree" data-bs-parent="#thumbnail-slider">
                                         <div class="accordion-body">
                                             <ul>
-                                                <li>Technical Services</li>
-                                                <li>Soft Services</li>
+                                                <li>Audit</li>
+                                                <li>Tech Platform</li>
+                                                <li>IoT Solutions</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -291,8 +285,10 @@
                                         aria-labelledby="headingFour" data-bs-parent="#thumbnail-slider">
                                         <div class="accordion-body">
                                             <ul>
-                                                <li>Technical Services</li>
-                                                <li>Soft Services</li>
+                                                <li>HVAC Duct Solutions</li>
+                                                <li>Solar PV Solutions</li>
+                                                <li>RECD Solutions</li>
+                                                <li>EV Charging Solutions</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -335,8 +331,8 @@
                     <div class="service-mobcontent">
                         <div class="text-content">
                             <ul>
-                                <li>Technical Services</li>
-                                <li>Soft Services</li>
+                                <li>MEP & General Engineering</li>
+                                <li>Micro Project Services</li>
                             </ul>
                             <p class="service-btn"><a class="enquire-btn" href="#">Enquire Now</a></p>
                         </div>
@@ -351,8 +347,9 @@
                     <div class="service-mobcontent">
                         <div class="text-content">
                             <ul>
-                                <li>Technical Services</li>
-                                <li>Soft Services</li>
+                                <li>Audit</li>
+                                <li>Tech Platform</li>
+                                <li>IoT Solutions</li>
                             </ul>
                             <p class="service-btn"><a class="enquire-btn" href="#">Enquire Now</a></p>
                         </div>
@@ -367,8 +364,10 @@
                     <div class="service-mobcontent">
                         <div class="text-content">
                             <ul>
-                                <li>Technical Services</li>
-                                <li>Soft Services</li>
+                                <li>HVAC Duct Solutions</li>
+                                <li>Solar PV Solutions</li>
+                                <li>RECD Solutions</li>
+                                <li>EV Charging Solutions</li>
                             </ul>
                             <p class="service-btn"><a class="enquire-btn" href="#">Enquire Now</a></p>
                         </div>
@@ -412,7 +411,7 @@
         </div>
     </section>
     <!-- your trusted section end -->
-    <!-- Milestones section end -->
+    <!-- framework section end -->
     <section class="Our-framework facility-frame">
         <div class="container">
             <!--  -->
@@ -503,7 +502,7 @@
             <!-- mobile -->
         </div>
     </section>
-    <!-- industries section start -->
+    <!-- framework section start -->
     <!-- industries section start -->
     <section class="your-trused Industries-section">
         <div class="container">
