--- a/ifm-Page.html
+++ b/ifm-Page.html
@@ -51,7 +51,7 @@
     <!-- Banner section -->
     <section class="banner-section ifm-banner">
         <div class="banner-content wow bounceInUp">
-            <h1>One Partner To Meet All Your Facility Needs</h1>
+            <h1>Your One-Stop Partner for Technical, Engineering, MEP, and Soft Services</h1>
             <p class="mt-3 common-btn"><a href="">Enquire Now</a></p>
         </div>
         <div class="banner-image animated zoomIn">
@@ -117,19 +117,21 @@
             <div class="consistent-main-div">
                 <div class="consistent-cont">
                     <h2 class="wow bounceInLeft">Integrated Facility Management</h2>
-                    <p>Managing all facility-related services through a single provider is known as integrated facility
-                        management, or IFM. This method guarantees more cost-effective, efficient, and simplified
-                        operations. At Apollo FMS, we started out as a technical services provider but have now grown
-                        into a full-service IFM business, providing a vast array of solutions that are specifically
-                        designed to satisfy the various demands of our clients.</p>
-                    <p>Our capacity to offer microproject support and sustainable services is one of our
-                        specialties. In addition, we have IFM software to improve operational transparency, optimize
-                        workflows, and provide instantaneous insights.</p>
-                    <div class="moretext">
+                    <div class="read-moremain">
+                        <p>Managing all facility-related services through a single provider is known as integrated
+                            facility management, or IFM. This method guarantees more cost-effective, efficient, and
+                            simplified operations. At Apollo FMS, we started out as a technical services provider but
+                            have now grown into a full-service IFM business, providing a vast array of solutions that
+                            are specifically designed to satisfy the various demands of our clients.</p>
+                        <div class="moretext">
+                            <p>Our capacity to offer microproject support and sustainable services is one of our
+                                specialties. In addition, we have IFM software to improve operational transparency,
+                                optimize workflows, and provide instantaneous insights.</p>
 
-                        <p>Apollo FMS makes management easier for our clients by providing a "one vendor, multiple
-                            services" model, which guarantees the smooth integration of diverse services under one roof.
-                        </p>
+                            <p>Apollo FMS makes management easier for our clients by providing a "one vendor, multiple
+                                services" model, which guarantees the smooth integration of diverse services under one
+                                roof.</p>
+                        </div>
 
                     </div>
                     <p class="read-more"><a class="moreless-button" href="javascript:void(0)">Read more</a> <span><i
@@ -186,10 +188,8 @@
                             <!-- Slider 2 -->
                             <div id="slider2" class="slider service-mainimg">
                                 <div><img src="./Images/our-value-img-1.webp" alt=""></div>
-                                <div><img src="./new-images/oferrepair and maintenance.png"
-                                        alt=""></div>
-                                <div><img src="./new-images/oferPerformance improvement.png"
-                                        alt=""></div>
+                                <div><img src="./new-images/oferrepair and maintenance.png" alt=""></div>
+                                <div><img src="./new-images/oferPerformance improvement.png" alt=""></div>
                                 <div><img src="./new-images/oferSustainable solutions.png" alt="">
                                 </div>
                             </div>
@@ -235,8 +235,8 @@
                                         aria-labelledby="headingTwo" data-bs-parent="#thumbnail-slider">
                                         <div class="accordion-body">
                                             <ul>
-                                                <li>Technical Services</li>
-                                                <li>Soft Services</li>
+                                                <li>MEP & General Engineering</li>
+                                                <li>Micro Project Services</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -255,8 +255,9 @@
                                         aria-labelledby="headingThree" data-bs-parent="#thumbnail-slider">
                                         <div class="accordion-body">
                                             <ul>
-                                                <li>Technical Services</li>
-                                                <li>Soft Services</li>
+                                                <li>Audit</li>
+                                                <li>Tech Platform</li>
+                                                <li>IoT Solutions</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -275,8 +276,10 @@
                                         aria-labelledby="headingFour" data-bs-parent="#thumbnail-slider">
                                         <div class="accordion-body">
                                             <ul>
-                                                <li>Technical Services</li>
-                                                <li>Soft Services</li>
+                                                <li>HVAC Duct Solutions</li>
+                                                <li>Solar PV Solutions</li>
+                                                <li>RECD Solutions</li>
+                                                <li>EV Charging Solutions</li>
                                             </ul>
                                         </div>
                                     </div>
@@ -319,8 +322,8 @@
                     <div class="service-mobcontent">
                         <div class="text-content">
                             <ul>
-                                <li>Technical Services</li>
-                                <li>Soft Services</li>
+                                <li>MEP & General Engineering</li>
+                                <li>Micro Project Services</li>
                             </ul>
                             <p class="service-btn"><a class="enquire-btn" href="#">Enquire Now</a></p>
                         </div>
@@ -335,8 +338,9 @@
                     <div class="service-mobcontent">
                         <div class="text-content">
                             <ul>
-                                <li>Technical Services</li>
-                                <li>Soft Services</li>
+                                <li>Audit</li>
+                                <li>Tech Platform</li>
+                                <li>IoT Solutions</li>
                             </ul>
                             <p class="service-btn"><a class="enquire-btn" href="#">Enquire Now</a></p>
                         </div>
@@ -351,8 +355,10 @@
                     <div class="service-mobcontent">
                         <div class="text-content">
                             <ul>
-                                <li>Technical Services</li>
-                                <li>Soft Services</li>
+                                <li>HVAC Duct Solutions</li>
+                                <li>Solar PV Solutions</li>
+                                <li>RECD Solutions</li>
+                                <li>EV Charging Solutions</li>
                             </ul>
                             <p class="service-btn"><a class="enquire-btn" href="#">Enquire Now</a></p>
                         </div>
