--- a/Soft-service.html
+++ b/Soft-service.html
@@ -60,51 +60,54 @@
             <img class="mobile-img" src="Images/Soft-service-banner.webp" alt="Banner Image">
         </div>
     </section>
-    <!-- slider-section-start  -->
-    <section class="slider-section">
+       <!-- slider-section-start  -->
+       <section class="slider-section">
         <div class="slider client-patner">
             <div class="owl-carousel owl-theme clients-carousel">
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo1.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo9.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo2.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo10.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo3.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo11.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo4.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo12.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo5.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo13.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo6.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo14.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo7.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo15.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo8.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo16.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo9.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo17.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo10.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo18.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo11.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo19.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo12.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo20.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo13.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo4.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo14.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo5.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo15.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo6.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo16.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo7.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo17.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo8.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo18.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo9.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo19.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo10.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo20.png">
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo11.png">
+                </div>
+                <div class="item box"><img alt="client logo" class="client-img" src="./new-images/pather-logo3.png">
                 </div>
             </div>
+        </div>
         </div>
         </div>
     </section>
