--- a/Soft-service.html
+++ b/Soft-service.html
@@ -52,7 +52,7 @@
     <!-- Banner section -->
     <section class="banner-section">
         <div class="banner-content wow bounceInUp">
-            <h1>Healthy, Hygienic & Clean Facilities for a Healthier Environment</h1>
+            <h1>Healthy, Hygienic, and Clean Facilities for a Healthier Environment</h1>
             <p class="mt-3 common-btn"><a href="">Enquire Now</a></p>
         </div>
         <div class="banner-image animated zoomIn">
